features section begin

--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
         </div>
         <button class="btn">Get Started</button>
 
+    <!-- end of main section -->
+    </section>
 
-        
+    <!-- features section -->
+
+    <!-- end of features section -->
+    <section id="features">
+        <div class="features_content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque repudiandae consectetur odio corrupti, aspernatur earum veniam ex voluptate debitis maiores eveniet quod eligendi tempore in, officiis vel incidunt iure ab cupiditate voluptatibus magnam voluptatum perspiciatis! Aperiam ipsam impedit error dicta autem sint, itaque exercitationem praesentium laboriosam magni, accusantium doloribus deserunt illo, atque sapiente. Labore, eos nesciunt! Quas natus deserunt, corrupti voluptatum est deleniti, consequuntur officia, impedit eveniet officiis excepturi velit aspernatur? Nulla repellendus labore commodi corporis, quam porro molestias quo cum doloremque accusamus quibusdam magnam quos reprehenderit ex consectetur dolorum amet eius, obcaecati aliquid, eaque ipsam minima assumenda temporibus officia!</p>
+        </div>
 
     </section>
-    
 
     <script src="./main.js"></script>
 </body>
