--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Fylo</title>
 </head>
 <body>
 
@@ -44,15 +44,114 @@
     </section>
 
     <!-- features section -->
-
-    <!-- end of features section -->
     <section id="features">
         <div class="features_content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque repudiandae consectetur odio corrupti, aspernatur earum veniam ex voluptate debitis maiores eveniet quod eligendi tempore in, officiis vel incidunt iure ab cupiditate voluptatibus magnam voluptatum perspiciatis! Aperiam ipsam impedit error dicta autem sint, itaque exercitationem praesentium laboriosam magni, accusantium doloribus deserunt illo, atque sapiente. Labore, eos nesciunt! Quas natus deserunt, corrupti voluptatum est deleniti, consequuntur officia, impedit eveniet officiis excepturi velit aspernatur? Nulla repellendus labore commodi corporis, quam porro molestias quo cum doloremque accusamus quibusdam magnam quos reprehenderit ex consectetur dolorum amet eius, obcaecati aliquid, eaque ipsam minima assumenda temporibus officia!</p>
+        <div class="features_content_main">
+            <img class="features_icon" src="./images/icon-access-anywhere.svg" alt="acess anywhere">
+            <h2>Access your files anywhere</h2>
+            <p>The ability to use a smartphone, tablet or computer to access your account means your files follows you everywere </p>
         </div>
 
-    </section>
+        <div class="features_content_main">
+            <img class="features_icon" src="./images/icon-security.svg" alt="security">
+            <h2>Security of you can trust</h2>
+            <p>2-Factor authentication and user controlled encryption are just a coulple of the security features we allow to help secure your files.</p>
+        </div>
+        
+        <div class="features_content_main">
+            <img class="features_icon" src="./images/icon-collaboration.svg" alt="">
+            <h2>Real time collaboration</h2>
+            <p>Securely share files and folders with friends, family and collagues for live collaboration. No email attachments required. </p>
+        </div>
 
+        <div class="features_content_main">
+            <img class="features_icon" src="./images/icon-any-file.svg" alt="">
+            <h2>Store any type of file</h2>
+            <p>The ability to use a smartphone, tablet or computer to access your account means your files follows you everywere </p>
+        </div>
+        </div>
+    </section>
+    <!-- end of features section -->
+
+    <!-- productivity section -->
+    <section id="productivity">
+        <div class="productivity_content">
+            <div class="productivity_image">
+                <img src="./images/illustration-stay-productive.png" alt="">
+            </div>
+            <div class="productivity_texts">
+                <div>
+                    <h1>Stay Productive, <br> wherever you are </h1>
+                </div>        
+                <p class="text-1">Never let location be an issue when accesssing your files. Fylo has you covered for all of your file storage needs.</p>
+                <p class="text-2">
+                    Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required. 
+                </p>
+                <div>
+                    <a href="#">See how Fylo works</a>
+                </div>              
+            </div>
+        </div>
+    </section>
+    <!-- end of productivity section -->
+
+    <!-- textimonial section -->
+    <section id="testimonial">
+        <div class="testimonial_content">
+            <div class="testimonial_box">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <div class="profile">
+                    <div>
+                        <img src="./images/profile-1.jpg" alt="user-1">
+                    </div>
+                    <div class="title">
+                        <h4>Satish Patel</h4>
+                        <p>Founder & CEO, Huddle</p>
+                    </div> 
+                </div>            
+            </div> 
+            <div class="testimonial_box box_2">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <div class="profile">
+                    <div>
+                        <img src="./images/profile-1.jpg" alt="user-1">
+                    </div>
+                    <div class="title">
+                        <h4>Satish Patel</h4>
+                        <p>Founder & CEO, Huddle</p>
+                    </div> 
+                </div>            
+            </div>
+            <div class="testimonial_box">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <div class="profile">
+                    <div>
+                        <img src="./images/profile-1.jpg" alt="user-1">
+                    </div>
+                    <div class="title">
+                        <h4>Satish Patel</h4>
+                        <p>Founder & CEO, Huddle</p>
+                    </div> 
+                </div>            
+            </div>
+        </div>
+    </section>
+    <!-- end of testimonials section -->
+
+<!-- sign up section -->
+ <section id="sign-up">
+     <div class="sign-up_content">
+
+     </div>
+     <div>
+
+     </div>
+     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, animi enim voluptates illum veritatis quisquam voluptatum facilis laudantium repellat, vel optio ab itaque! Atque numquam libero vitae ratione voluptas minus aliquam maxime illo assumenda, corrupti eos, iste ex. Veritatis illum debitis cum, ducimus, sunt aliquid consectetur quasi, commodi laboriosam nisi reiciendis neque libero enim incidunt vel ratione fugiat placeat suscipit iste? Consectetur eligendi ratione esse assumenda rerum itaque quo, pariatur perspiciatis expedita eius, beatae explicabo sapiente qui hic modi molestiae, iste quod. Nulla, voluptate facilis. Rerum id excepturi quo et placeat rem alias. Eius, quo dolorum rem error enim repellendus!</p>
+ </section>
+
+<!-- end of sign up section -->
+
+    
     <script src="./main.js"></script>
 </body>
 </html>
