--- a/index.html
+++ b/index.html
@@ -141,15 +141,29 @@
 <!-- sign up section -->
  <section id="sign-up">
      <div class="sign-up_content">
-
-     </div>
-     <div>
-
-     </div>
-     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, animi enim voluptates illum veritatis quisquam voluptatum facilis laudantium repellat, vel optio ab itaque! Atque numquam libero vitae ratione voluptas minus aliquam maxime illo assumenda, corrupti eos, iste ex. Veritatis illum debitis cum, ducimus, sunt aliquid consectetur quasi, commodi laboriosam nisi reiciendis neque libero enim incidunt vel ratione fugiat placeat suscipit iste? Consectetur eligendi ratione esse assumenda rerum itaque quo, pariatur perspiciatis expedita eius, beatae explicabo sapiente qui hic modi molestiae, iste quod. Nulla, voluptate facilis. Rerum id excepturi quo et placeat rem alias. Eius, quo dolorum rem error enim repellendus!</p>
+        <h1>Get early access today</h1>
+        <p>It only takes a minute to sign up and our free starter is extremely generous. if you have any questions, our support team would always be happy to help you</p>
+       
+        <form>
+            <div class="search_bar">
+                <div class="searchbar_1">
+                    <input type="text" placeholder="email@example.com">
+                </div>
+                <div class="searchbar_2">
+                    <button class="btn">Get started</button>
+                </div>
+            </div>
+        </form>        
+     </div>    
  </section>
-
 <!-- end of sign up section -->
+
+<!-- footer -->
+
+<!-- end of footer -->
+<section id="footer">
+
+</section>
 
     
     <script src="./main.js"></script>
