--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
     <title>Fylo</title>
 </head>
 <body>
@@ -163,33 +164,56 @@
 <!-- end of footer -->
 <section id="footer">
     <div class="footer_content">
-        
             <div class="footer_logo">
                 <img src="./images/logo.svg" alt="">
             </div>
             <div class="container">
                 <div class="footer_location">
-                    <img src="./images/icon-location.svg" alt="">
+                    <img src="./images/icon-location.svg" alt="location">
                     <div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores odio quia at ex! Corporis blanditiis eum libero </p>
                     </div>
                 </div>
                 <div class="footer_location">
-                    <img src="./images/icon-location.svg" alt="">
-                    <div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis inventore esse mollitia amet hic qui?</p>
+                    <div class="container-2">
+                        <div class="phone">
+                            <img src="./images/icon-phone.svg" alt="phone">
+                            <div>
+                                <p>+1-543-123-4567</p>
+                            </div>
+                        </div>
+                        <div class="email">
+                            <img src="./images/icon-email.svg" alt="email">
+                            <div>
+                                <p>example@fylo.com</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="footer_location">
-                    <img src="./images/icon-location.svg" alt="">
-                    <div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis inventore esse mollitia amet hic qui?</p>
+                    <div class="links">
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Jobs</a></li>
+                            <li><a href="#">Press</a></li>
+                            <li><a href="#">Blogs</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="footer_location">
-                    <img src="./images/icon-location.svg" alt="">
-                    <div>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis inventore esse mollitia amet hic qui?</p>
+                    <div class="links">
+                        <ul>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Terms</a></li>
+                            <li><a href="#">Privary</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer_location">
+                    <div class="social-links">
+                        <div><i class="fas fa-home fa-fw"></i></div>
+                        <div><i class="fas fa-home fa-fw"></i></div>
+                        <div><i class="fas fa-home fa-fw"></i></div>
                     </div>
                 </div>
                 
