--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/querries.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
     <title>Fylo</title>
 </head>
@@ -82,7 +83,7 @@
             </div>
             <div class="productivity_texts">
                 <div>
-                    <h1>Stay Productive, <br> wherever you are </h1>
+                    <h1>Stay Productive, wherever you are </h1>
                 </div>        
                 <p class="text-1">Never let location be an issue when accesssing your files. Fylo has you covered for all of your file storage needs.</p>
                 <p class="text-2">
@@ -100,7 +101,7 @@
     <section id="testimonial">
         <div class="testimonial_content">
             <div class="testimonial_box">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio.</p>
                 <div class="profile">
                     <div>
                         <img src="./images/profile-1.jpg" alt="user-1">
@@ -112,7 +113,7 @@
                 </div>            
             </div> 
             <div class="testimonial_box box_2">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio.</p>
                 <div class="profile">
                     <div>
                         <img src="./images/profile-1.jpg" alt="user-1">
@@ -124,7 +125,7 @@
                 </div>            
             </div>
             <div class="testimonial_box">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio.</p>
                 <div class="profile">
                     <div>
                         <img src="./images/profile-1.jpg" alt="user-1">
