--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
                 <p class="text-2">
                     Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required. 
                 </p>
-                <div>
+                <div class="arrow">
                     <a href="#">See how Fylo works</a>
+                    <img src="./images/icon-arrow.svg" alt="arrow">
                 </div>              
             </div>
         </div>
