--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
                 </div>
                 <div class="footer_location">
                     <div class="social-links">
-                        <div><i class="fas fa-home fa-fw"></i></div>
-                        <div><i class="fas fa-home fa-fw"></i></div>
-                        <div><i class="fas fa-home fa-fw"></i></div>
+                        <div><i class="fab fa-facebook fa-fw"></i></div>
+                        <div><i class="fab fa-twitter"></i></div>
+                        <div><i class="fab fa-instagram"></i></div>
                     </div>
                 </div>
                 
