--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 
     <!-- textimonial section -->
     <section id="testimonial">
+        <blockquote class="blockquote_text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam, molestias?
+        </blockquote>
         <div class="testimonial_content">
             <div class="testimonial_box">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio.</p>
@@ -117,7 +120,7 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio.</p>
                 <div class="profile">
                     <div>
-                        <img src="./images/profile-1.jpg" alt="user-1">
+                        <img src="./images/profile-2.jpg" alt="user-1">
                     </div>
                     <div class="title">
                         <h4>Satish Patel</h4>
@@ -129,7 +132,7 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus totam hic nobis quae id accusamus, quas velit deserunt quos optio.</p>
                 <div class="profile">
                     <div>
-                        <img src="./images/profile-1.jpg" alt="user-1">
+                        <img src="./images/profile-3.jpg" alt="user-1">
                     </div>
                     <div class="title">
                         <h4>Satish Patel</h4>
@@ -138,6 +141,7 @@
                 </div>            
             </div>
         </div>
+   
     </section>
     <!-- end of testimonials section -->
 
