--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="row">
             <a href="#"><img src="./images/logo.svg" class="logo logo-when-sticky" alt="flyo logo"></a>            
             <ul class="main-nav">
-                <li><a href="#">Features</a></li>
+                <li><a href="#features">Features</a></li>
                 <li><a href="#">Team</a></li>
-                <li><a href="#">Sign-in</a></li>
+                <li><a href="#sign-up">Sign-in</a></li>
             </ul>
         </div>
     </nav>
