--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <section id="footer">
     <div class="footer_content">
             <div class="footer_logo">
-                <img src="./images/logo.svg" alt="">
+               <a href="#"><img src="./images/logo.svg" alt="home"></a> 
             </div>
             <div class="container">
                 <div class="footer_location">
