--- a/index.html
+++ b/index.html
@@ -146,21 +146,26 @@
 
 <!-- sign up section -->
  <section id="sign-up">
-     <div class="sign-up_content">
-        <h1>Get early access today</h1>
-        <p>It only takes a minute to sign up and our free starter is extremely generous. if you have any questions, our support team would always be happy to help you</p>
-       
-        <form>
-            <div class="search_bar">
-                <div class="searchbar_1">
-                    <input type="text" placeholder="email@example.com">
-                </div>
-                <div class="searchbar_2">
-                    <button class="btn">Get started for free</button>
-                </div>
+    
+        <div class="sign-up_content">
+            <div class="signup-texts">
+                <h1>Get early access today</h1>
+                <p>It only takes a minute to sign up and our free starter is extremely generous. if you have any questions, our support team would always be happy to help you</p>
+            </div>  
+
+            <div class="form-content">
+                <form>
+                    <div class="search_bar"> 
+                        <div class="searchbar_1">
+                            <input type="text" placeholder="email@example.com">
+                        </div>
+                        <div class="searchbar_2">
+                            <input type="submit" class="btn" placeholder="Get started for free">
+                        </div>
+                    </div>
+                </form> 
             </div>
-        </form>        
-     </div>    
+        </div>               
  </section>
 <!-- end of sign up section -->
 
